fixed white space on right side

--- a/gladiators/gladiatorcss.css
+++ b/gladiators/gladiatorcss.css
@@ -4,6 +4,15 @@
   /*border-style: dashed;*/
 }
 
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
+
 body {background-image: url("img/coliseum.png");
       background-repeat: no-repeat;
       background-size: 100%;}
